# lexactivator-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.txt  build.rs  download-libs.sh
.github/workflows/: crate-publish.yml  test.yml
examples/: README.md  license-activation.rs
libs/: README.md
src/: error_code.rs  error_codes.rs  extern_functions.rs  lib.rs  string_utils.rs
