[package]
name = "lexactivator"
version = "3.39.1"
edition = "2021"
description = "LexActivator SDK for Rust"
homepage = "https://cryptlex.com"
rust-version = "1.88"
repository = "https://github.com/cryptlex/lexactivator-rust"
# TODO
# documentation = "https://docs.cryptlex.com/node-locked-licenses/using-lexactivator-with-rust"
license = "MIT"
include = [
    "build.rs",
    "/src",
    "/examples",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cfg-if = "1.0.0"
ureq = "2.12.1"
zip = "3.0.0"

[[example]]
name = "license-activation"
crate-type = ["bin"]
